2005-12-31  Andrew Pinski  <pinskia@ohysics.uc.edu>

PR tree-opt/25612
        * tree-ssa-pre.c (compute_avail): Treat the static chain decl as a
        parameter and pretend that it is defined in the entry basic block.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@109200 138bc75d-0d04-0410-961f-82ee72b054a4